--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "class-variance-authority": "^0.6.1",
+    "cloudinary": "^1.39.0",
     "clsx": "^1.2.1",
     "cmdk": "^0.2.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "lucide-react": "^0.260.0",
     "next": "13.4.9",
+    "next-cloudinary": "^4.16.2",
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-cmdk": "^1.3.9",
