feat: order routes v1

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "lucide-react": "^0.260.0",
     "next": "13.4.9",
     "next-cloudinary": "^4.16.2",
+    "next-themes": "^0.2.1",
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-cmdk": "^1.3.9",
