--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-cmdk": "^1.3.9",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.1",
+    "react-hot-toast": "^2.4.1",
     "stripe": "^12.18.0",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.3",
