--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "next": "13.4.9",
     "next-cloudinary": "^4.16.2",
     "next-themes": "^0.2.1",
+    "nextjs-toploader": "^1.4.2",
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-cmdk": "^1.3.9",
